--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>傻子看我</title>
+<title>内耗姐·张蓝</title>
  
 <style>
 html,body{
@@ -329,7 +329,7 @@ var S = {
     if (i !== -1) {
       S.UI.simulate(decodeURI(action).substring(i + 3));
     } else {
-      S.UI.simulate('|#countdown 3||蒋|丽|秋|大|傻|子|!^_^!|');
+      S.UI.simulate('|#countdown 3||爱|哭|小|鬼|张|蓝|!^_^!|');
     }
  
     S.Drawing.loop(function () {
